# phoneme_classification

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  train.py
src/data_utils/: augmentations.py  dataset.py  loader.py  transform.py
src/experiment/: exp_params.py  experiment.py
src/models/: decoder.py  encoder.py  initialize.py  losses.py  vae.py
src/train/: train.py
src/utils/: device.py  env_loader.py  evaluate_latent_classification.py  extract_latents.py  logger.py  metrics.py  run_manager.py  schedules.py
tests/: test_augmentations.py  test_dataset.py  test_device.py  test_extract_latents.py  test_loader.py  test_model_forward.py  test_schedules.py  test_transform.py
