[project]
name = "phoneme-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "pytest>=8.3.5",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
]


[tool.mypy]
ignore_missing_imports = true
